--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
+# class file ignore
 *.class
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files ignore#
 *.jar
 *.war
 *.ear
