--- a/jbp-mapper/pom.xml
+++ b/jbp-mapper/pom.xml
@@ -9,20 +9,8 @@
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>jbp-core</artifactId>
+    <artifactId>jbp-mapper</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
-    <description>The core module of jbp project,domain layer</description>
-
-    <dependencies>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-    </dependencies>
+    <description>The mapper module of jbp project</description>
 </project>
