--- a/jbp-web/pom.xml
+++ b/jbp-web/pom.xml
@@ -3,10 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <!--parent project-->
-	<parent>
-		<groupId>com.tqmars</groupId>
-		<artifactId>jbp-parent</artifactId>
-	</parent>
+    <parent>
+        <groupId>com.tqmars</groupId>
+        <artifactId>jbp-parent</artifactId>
+        <version>1.0.0</version>
+    </parent>
 
   <artifactId>jbp-web</artifactId>
   <packaging>war</packaging>
