--- a/jbp-event/pom.xml
+++ b/jbp-event/pom.xml
@@ -9,10 +9,10 @@
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>jbp-core</artifactId>
+    <artifactId>jbp-event</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
-    <description>The core module of jbp project,domain layer</description>
+    <description>The event module of jbp project,domain layer</description>
 
     <dependencies>
         <dependency>
@@ -23,12 +23,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.tqmars</groupId>
-            <artifactId>jbp-event</artifactId>
-            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
